tests/snapshots/pipeline__minimal_html.snap
---
source: tests/pipeline.rs
expression: "render_fixture(\"minimal.org\")"
---
<p>A single paragraph of preamble text before any heading.</p>
<h2 id="first">First Heading</h2>
<p>Some body text with <strong>bold</strong>, <em>italic</em>, and <code class="verbatim">verbatim</code>.</p>
<h3 id="a-subheading">A Subheading <span class="tag">tag1</span> <span class="tag">tag2</span></h3>
<ul>
<li>an unordered item</li>
<li>another with a checkbox [ ]</li>
</ul>
<h2 id="second-heading">Second Heading</h2>
<p>See <a href="#first">the first heading</a>.</p>
